--- a/web-app/src/presentation-layer/views/start.hbs
+++ b/web-app/src/presentation-layer/views/start.hbs
@@ -1,4 +1,6 @@
-<h1>Start</h1>
+<div class="start">
+    <h1>HOTS Builds</h1>
 
-<p>This is the start page</p>
-<p>Hejsan</p>
+    <p>Welcome to HOTS Builds, here you can find the best builds for each hero in HOTS</p>
+
+</div>
