Added routers for each class

--- a/web-app/src/presentation-layer/views/cassia.hbs
+++ b/web-app/src/presentation-layer/views/cassia.hbs
@@ -55,7 +55,9 @@
                     <span class="heroes_build_talent_tier_situational"></span>
                     <span class="heroes_build_talent_tier_yes"></span>
                 </span>
-                <img src="/images/talents-copy/cassia/storm_ui_icon_cassia_new_gloves.png" alt="New gloves">
+                <div class="imageText" title="Gain 1 Basic Attack range. While Avoidance is fully charged, gain an additional 1 Basic Attack range.">
+                    <img src="/images/talents-copy/cassia/storm_ui_icon_cassia_new_gloves.png" alt="New gloves">
+                </div>
                 <a class="heroes_build_talent_tier_situational" href="/">
                     <img src="/images/talents-copy/cassia/storm_ui_icon_cassia_avoidance_b.png" alt="avoidance">
                 </a>
