--- a/web-app/src/presentation-layer/views/accounts-sign-up.hbs
+++ b/web-app/src/presentation-layer/views/accounts-sign-up.hbs
@@ -10,7 +10,7 @@
 </div>
 
 <div class="login-div">
-    <form class="login-form" action="/sign-up" method="post">
+    <form class="login-form" action="/accounts/sign-up" method="post">
         <div class="field">
             <div class="fas fa-envelope"></div>
             <input type="text" placeholder="Username" name="username" required>
@@ -21,7 +21,7 @@
         </div>
         <div class="field">
             <div class="fas fa-lock"></div>
-            <input type="password" placeholder="Confirm Password" name="password2" required>
+            <input type="password" placeholder="Confirm Password" name="confirm_password" required>
         </div>
         <button>Sign up</button>
     </form>
