--- a/web-app/src/presentation-layer/views/accounts-sign-in.hbs
+++ b/web-app/src/presentation-layer/views/accounts-sign-in.hbs
@@ -21,7 +21,7 @@
             <div class="fas fa-lock"></div>
             <input type="password" placeholder="Password" name="password" required>
         </div>
-        <a href="/accounts/sign-up">Sign up</a>
+        <a href="/accounts/sign-up" class="sign-up">Sign up</a>
         <button>LOGIN</button>
     </form>
 </div>
