Added login and logout functionality

--- a/web-app/src/presentation-layer/layouts/main.hbs
+++ b/web-app/src/presentation-layer/layouts/main.hbs
@@ -27,7 +27,7 @@
             <li> <a href="/supports">Supports</a> </li>
             {{#if session.isLoggedIn}}
             <li>
-                <form action="/log-out" method="post" class="log-out form">
+                <form action="/accounts/log-out" method="post" class="log-out form">
                 <button type="submit" class="nav-button">Log out</button>
                 </form>
             </li>
