--- a/web-app/src/presentation-layer/views/azmodan.hbs
+++ b/web-app/src/presentation-layer/views/azmodan.hbs
@@ -26,7 +26,8 @@
                     <span class="heroes_build_talent_tier_situational"></span>
                     <span class="heroes_build_talent_tier_no"></span>
                 </span>
-                <img src="/images/talents-copy/azmodan/storm_ui_icon_azmodan_summondemonwarrior.png" alt="extra warrior">
+                <img src="/images/talents-copy/azmodan/storm_ui_icon_azmodan_summondemonwarrior.png"
+                    alt="extra warrior">
                 <a class="heroes_build_talent_tier_situational" href="/">
                     <img src="/images/talents-copy/azmodan/storm_ui_icon_azmodan_summondemonwarrior_a.png"
                         alt="better warrior">
@@ -47,7 +48,8 @@
                     <span class="heroes_build_talent_tier_yes"></span>
                     <span class="heroes_build_talent_tier_no"></span>
                 </span>
-                <img src="/images/talents-copy/azmodan/storm_ui_icon_azmodan_demonicinvasion.png" alt="demonic invasion">
+                <img src="/images/talents-copy/azmodan/storm_ui_icon_azmodan_demonicinvasion.png"
+                    alt="demonic invasion">
             </div>
             <div class="heroes_build_talent_tier">
                 <span class="heroes_build_talent_tier_subtitle">Level 13</span>
@@ -81,7 +83,8 @@
                 </span>
                 <img src="/images/talents-copy/azmodan/storm_ui_icon_azmodan_allshallburn.png" alt="all shall burn">
                 <a class="heroes_build_talent_tier_situational" href="/">
-                    <img src="/images/talents-copy/azmodan/storm_ui_icon_azmodan_demonicinvasion.png" alt="demonic invasion">
+                    <img src="/images/talents-copy/azmodan/storm_ui_icon_azmodan_demonicinvasion.png"
+                        alt="demonic invasion">
                 </a>
             </div>
         </div>
@@ -117,7 +120,8 @@
             </span>
             <img src="/images/talents-copy/azmodan/storm_ui_icon_azmodan_summondemonwarrior.png" alt="extra warrior">
             <a class="heroes_build_talent_tier_situational" href="/">
-                <img src="/images/talents-copy/azmodan/storm_ui_icon_azmodan_summondemonwarrior_a.png" alt="better warrior">
+                <img src="/images/talents-copy/azmodan/storm_ui_icon_azmodan_summondemonwarrior_a.png"
+                    alt="better warrior">
             </a>
         </div>
         <div class="heroes_build_talent_tier">
@@ -144,7 +148,8 @@
                 <span class="heroes_build_talent_tier_no"></span>
                 <span class="heroes_build_talent_tier_no"></span>
             </span>
-            <img src="/images/talents-copy/azmodan/storm_ui_icon_azmodan_summondemonwarrior.png" alt="Summon demon warrior">
+            <img src="/images/talents-copy/azmodan/storm_ui_icon_azmodan_summondemonwarrior.png"
+                alt="Summon demon warrior">
         </div>
         <div class="heroes_build_talent_tier">
             <span class="heroes_build_talent_tier_subtitle">Level 16</span>
@@ -167,4 +172,35 @@
         </div>
     </div>
 </div>
+
+<div class="main-layout">
+    <h1> Reviews </h1>
+    {{#if session.isLoggedIn}}
+    <a href="/reviews">Add new Review</a>
+    {{else}}
+    <a href="/accounts/sign-in"> Log in to write a Review</a>
+    {{/if}}
+
+    {{#if hasDatabaseError}}
+    <p>Couldn't fetch the reviews at the moment, try again later.</p>
+    {{else}}
+
+    {{#if reviews.length}}
+
+    {{#each reviews}}
+    <article>
+        <h2>{{heroesName}}</h2>
+        <h3>{{name}}</h3>
+        <p>Rating: {{rating}} out of 5</p>
+        <p>Description: {{description}}</p>
+        <a href="/reviews/{{id}}">Read more</a>
+    </article>
+    {{/each}}
+
+    {{else}}
+    <p>There are no Reviews yet, please write one.</p>
+    {{/if}}
+
+    {{/if}}
+
 </div>
