--- a/web-app/src/presentation-layer/public/css/layout.css
+++ b/web-app/src/presentation-layer/public/css/layout.css
@@ -23,6 +23,12 @@ img:hover {
   text-align: center;
   padding: 5px 0;
   border-radius: 6px;
+
+  position: absolute;
+  z-index: 1;
+  top: 100%;
+  left: 50%;
+  margin-left: -60px; /* Use half of the width (120/2 = 60), to center the tooltip */
 }
 
 
