--- a/web-app/src/presentation-layer/views/hero.hbs
+++ b/web-app/src/presentation-layer/views/hero.hbs
@@ -21,7 +21,7 @@
                     {{!-- This needs to be fixed --}}
                     <span class="heroes_build_talent_tier_visual">
                         {{#each talent_tier_visual}}
-                            {{#if isTrue}}
+                            {{#if isVisible}}
                                 <span class="heroes_build_talent_tier_yes"></span>
                             {{else}}
                                 <span class="heroes_build_talent_tier_no"></span>
