--- a/web-app/src/presentation-layer/views/hero.hbs
+++ b/web-app/src/presentation-layer/views/hero.hbs
@@ -6,7 +6,7 @@
     {{#each builds}}
         <div class="heroes_build">
             <div class="heroes_build_header">
-                <h3 class="toc_no_parsing">{{build_name}}</h3>
+                <h3 class="toc_no_parsing">{{name}}</h3>
                 {{!-- This needs to be fixed --}}
                 <span class="heroes_build_tag heroes_build_tag_recommended">
                     <span>Recommended</span>
