Fixed multiple things from feedback

--- a/web-app/src/presentation-layer/views/accounts-sign-in.hbs
+++ b/web-app/src/presentation-layer/views/accounts-sign-in.hbs
@@ -1,7 +1,7 @@
 <div class="error-center">
     {{#if errors.length}}
     <p>Could not login because:</p>
-    <ul>
+    <ul class="error-list">
         {{#each errors}}
         <li>{{this}}</li>
         {{/each}}
